# twg2024_1

./: .gitignore  Cargo.toml  README.md  particles
abyss-release/assets/: diver.glb
assets/: beam_material.wgsl  camcone_material.wgsl  diver.glb  lvl0.glb  paint_material.wgsl
src/: camcone_material.rs  camera.rs  game_scene.rs  level.rs  level_generator.rs  lvl0.rs  lvl1.rs  main.rs  mips.rs  player.rs  scene.rs  utils.rs
src/components/: code.rs  fan.rs  gate.rs  loading.rs  mod.rs  security_camera.rs  socket.rs  switch.rs
src/levels/: lvl0.rs  lvl1.rs  lvl2.rs  lvl3.rs  lvl4.rs  mod.rs
src/materials/: beam_material.rs  mod.rs  paint_material.rs
