[package]
name = "twg-2024-1"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
bevy = { path = "./bevy", features = ["jpeg"] }
bevy-inspector-egui = { path = "./bevy-inspector-egui/crates/bevy-inspector-egui" }
bevy_hanabi = "0.9.0"
bevy_rapier2d = { path = "./bevy_rapier/bevy_rapier2d" }
futures-lite = "2.2.0"
image = "0.24.8"
pixelate_mesh = "0.2.0"
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
